platform/stack/packages/data/trino/manifests/install.yaml
# TRINO INSTALL RESOURCES
# This file is auto-generated with 'platform/stack/packages/data/trino/generate-manifests.sh'
---
# Source: trino/templates/service-coordinator.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino
  namespace: adhar-system
  labels:
    helm.sh/chart: trino-1.42.2
    app.kubernetes.io/name: trino
    app.kubernetes.io/instance: trino
    app.kubernetes.io/version: "480"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: coordinator
  annotations:
    {}
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: trino
    app.kubernetes.io/instance: trino
    app.kubernetes.io/component: coordinator
---
# Source: trino/templates/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino-worker
  namespace: adhar-system
  labels:
    helm.sh/chart: trino-1.42.2
    app.kubernetes.io/name: trino
    app.kubernetes.io/instance: trino
    app.kubernetes.io/version: "480"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: worker
  annotations:
    {}
spec:
  clusterIP: None
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: trino
    app.kubernetes.io/instance: trino
    app.kubernetes.io/component: worker
---
# Source: trino/templates/deployment-coordinator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-coordinator
  namespace: adhar-system
  labels:
    helm.sh/chart: trino-1.42.2
    app.kubernetes.io/name: trino
    app.kubernetes.io/instance: trino
    app.kubernetes.io/version: "480"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: coordinator
    trino.io/network-policy-protection: disabled
  annotations:
    {}
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: trino
      app.kubernetes.io/instance: trino
      app.kubernetes.io/component: coordinator
  template:
    metadata:
      annotations:
        checksum/catalog-config: 03591c7a519ba131f59c34349ac071649a610510e8ceaa96dd8cd858d705cfb5
        checksum/coordinator-config: d5d26c7d2d5d92ad9dcda45ff4eb28300d720333168a8f7ca3e4b48f74416780

      labels:
        helm.sh/chart: trino-1.42.2
        app.kubernetes.io/name: trino
        app.kubernetes.io/instance: trino
        app.kubernetes.io/version: "480"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: coordinator
        trino.io/network-policy-protection: disabled
    spec:
      serviceAccountName: default
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
        - name: config-volume
          configMap:
            name: trino-coordinator
        - name: catalog-volume
          configMap:
            name: trino-catalog
        - name: schemas-volume
          configMap:
            name: trino-schemas-volume-coordinator
      terminationGracePeriodSeconds: 30
      containers:
        - name: trino-coordinator
          image: trinodb/trino:480
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          volumeMounts:
            - mountPath: /etc/trino
              name: config-volume
            - mountPath: /etc/trino/catalog
              name: catalog-volume
            - mountPath: /etc/trino/schemas
              name: schemas-volume
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/info
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          readinessProbe:
            exec:
              command: [/usr/lib/trino/bin/health-check]
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          startupProbe:
            exec:
              command: [/usr/lib/trino/bin/health-check]
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 60
            successThreshold: 1
          lifecycle:
            {}
          resources:
            {}
---
# Source: trino/templates/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-worker
  namespace: adhar-system
  labels:
    helm.sh/chart: trino-1.42.2
    app.kubernetes.io/name: trino
    app.kubernetes.io/instance: trino
    app.kubernetes.io/version: "480"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: worker
    trino.io/network-policy-protection: disabled
  annotations:
    {}
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trino
      app.kubernetes.io/instance: trino
      app.kubernetes.io/component: worker
  template:
    metadata:
      annotations:
        checksum/catalog-config: 03591c7a519ba131f59c34349ac071649a610510e8ceaa96dd8cd858d705cfb5
        checksum/worker-config: 622ccec3da870ab972c40d5d41e608c79f5d31deea213716c1acdfa55b972d70
      labels:
        helm.sh/chart: trino-1.42.2
        app.kubernetes.io/name: trino
        app.kubernetes.io/instance: trino
        app.kubernetes.io/version: "480"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: worker
        trino.io/network-policy-protection: disabled
    spec:
      serviceAccountName: default
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
        - name: config-volume
          configMap:
            name: trino-worker
        - name: catalog-volume
          configMap:
            name: trino-catalog
        - name: schemas-volume
          configMap:
            name: trino-schemas-volume-worker
      terminationGracePeriodSeconds: 30
      containers:
        - name: trino-worker
          image: trinodb/trino:480
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          volumeMounts:
            - mountPath: /etc/trino
              name: config-volume
            - mountPath: /etc/trino/catalog
              name: catalog-volume
            - mountPath: /etc/trino/schemas
              name: schemas-volume
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/info
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          readinessProbe:
            exec:
              command: [/usr/lib/trino/bin/health-check]
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          startupProbe:
            exec:
              command: [/usr/lib/trino/bin/health-check]
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 60
            successThreshold: 1
          lifecycle:
          resources:
            {}
---
# Source: trino/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: trino-test-connection
  labels:
    helm.sh/chart: trino-1.42.2
    app.kubernetes.io/name: trino
    app.kubernetes.io/instance: trino
    app.kubernetes.io/version: "480"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: test
    test: connection
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: cli
      image: trinodb/trino:480
      command: ['trino']
      args:
      - trino://trino:8080
      - --user=admin
      - --debug
      - --execute=SELECT COUNT(*) FROM tpch.tiny.nation
      - --no-progress
  restartPolicy: Never
